translate from korean to japanese 70%

--- a/src/main/resources/templates/admins/admin-member-search.html
+++ b/src/main/resources/templates/admins/admin-member-search.html
@@ -53,7 +53,7 @@
                 <td class="members-delete__container">
                     <form action="/members/delete" method="post">
                         <input type="hidden" name="memberNo" th:value="${memberSearchDTO.memberNo}" />
-                        <button class="btn btn--xs btn--black">삭제</button>
+                        <button class="btn btn--xs btn--black"></button>
                     </form>
                 </td>
             </tr>
@@ -61,9 +61,9 @@
         </table>
 
         <div class="admin_member_page">
-            <span th:if="${pageSettings.page &lt;= 1}">이전</span>
+            <span th:if="${pageSettings.page &lt;= 1}">以前</span>
             <span th:unless="${pageSettings.page &lt;= 1}">
-            <a th:href="@{/members/admin/search(page=${pageSettings.page - 1},category=${memberSearchForm.category}, keyword=${memberSearchForm.keyword})}">이전</a>
+            <a th:href="@{/members/admin/search(page=${pageSettings.page - 1},category=${memberSearchForm.category}, keyword=${memberSearchForm.keyword})}">以前</a>
           </span>
 
 
@@ -75,10 +75,10 @@
            </span>
 
 
-            <span th:if="${pageSettings.page >= pageSettings.totalPage}">다음</span>
+            <span th:if="${pageSettings.page >= pageSettings.totalPage}">次に</span>
             <a th:unless="${pageSettings.page >= pageSettings.totalPage}"
                th:href="@{/members/admin/search(page=${pageSettings.page + 1},category=${memberSearchForm.category}, keyword=${memberSearchForm.keyword})}"
-            >다음</a
+            >次に</a
             >
         </div>
     </div>
