--- a/src/main/resources/templates/admins/admins-order-detail.html
+++ b/src/main/resources/templates/admins/admins-order-detail.html
@@ -27,7 +27,7 @@
                     <th>주문 번호</th>
                     <th>주문 상세 번호</th>
                     <th>상품 번호</th>
-                    <th>상품명</th>
+                    <th>商品名</th>
                     <th>사이즈</th>
                     <th>가격 (단위: 원)</th>
                     <th>수량</th>
