--- a/src/main/resources/templates/admins/item/admins-item-add.html
+++ b/src/main/resources/templates/admins/item/admins-item-add.html
@@ -21,7 +21,7 @@
         <form action="/items/admin/add" method="post" enctype="multipart/form-data" id="itemAddForm">
         <div class="admin_item_container">
           <div>
-            상품명
+            商品名
             <input type="text" name="itemName" class="admin_item_name_input" maxlength="30"/>
           </div>
 
