--- a/src/main/resources/templates/admins/qna/admin-qna-detail.html
+++ b/src/main/resources/templates/admins/qna/admin-qna-detail.html
@@ -78,7 +78,7 @@
                   </form>
                   <p></p>
                   <form th:action="@{'/qna/' + ${qnaDetail.qnaNo} + '/answer-delete'}" method="post" >
-                    <button class="btn btn--black btn--xs">삭제</button>
+                    <button class="btn btn--black btn--xs"></button>
                   </form>
                 </div>
 
@@ -96,7 +96,7 @@
 
           <div class="qna__delete">
             <form th:action="@{'/qna/' + ${qnaDetail.qnaNo} + '/delete'}" method="post">
-                <button class="btn btn--black btn--mi btn--black--red"> Q&A 삭제 </button>
+                <button class="btn btn--black btn--mi btn--black--red"> Q&A  </button>
             </form>
           </div>
       </div>
