--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -14,8 +14,8 @@
 <main class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
     <h1>404 errors</h1>
-    <h3>잘못된 요청입니다.</h3>
-    <button type="button" class="btn btn--black btn--home btn--error">홈으로 돌아가기</button>
+    <h3>正しくないリクエストです。</h3>
+    <button type="button" class="btn btn--black btn--home btn--error">ホームへ</button>
 </main>
 </body>
 </html>
