--- a/src/main/resources/templates/fragments/admin-header.html
+++ b/src/main/resources/templates/fragments/admin-header.html
@@ -2,7 +2,7 @@
     <a href="/admins/login" class="header__logo">PERION</a>
     <nav class="header__nav">
         <ul>
-            <li><a href="/">페리온</a></li>
+            <li><a href="/">クリアントページ</a></li>
         </ul>
     </nav>
 </header>
