--- a/src/main/resources/templates/fragments/admin-sidebar.html
+++ b/src/main/resources/templates/fragments/admin-sidebar.html
@@ -2,31 +2,31 @@
   <div class="margin"></div>
   <ul>
     <li>
-      <a href="/sales">매출 조회</a>
+      <a href="/sales">売上</a>
     </li>
     <li>
-      <a href="/members/admin">회원 조회</a>
+      <a href="/members/admin">会員一覧</a>
     </li>
     <li>
-      <a href="/items/admin">상품 조회</a>
+      <a href="/items/admin">商品一覧</a>
     </li>
     <li>
-      <a href="/items/admin/add">상품 등록</a>
+      <a href="/items/admin/add">商品登録</a>
     </li>
     <li>
-      <a href="/orders/admin/members">회원 주문 목록</a>
+      <a href="/orders/admin/members">会員注文一覧</a>
     </li>
     <li>
-      <a href="/orders/admin/non-members">비회원 주문 목록</a>
+      <a href="/orders/admin/non-members">非会員注文一覧</a>
     </li>
     <li>
-      <a href="/notice/admin">공지사항</a>
+      <a href="/notice/admin">お知らせ</a>
     </li>
     <li>
       <a href="/qna">Q&A</a>
     </li>
     <li>
-      <a href="/reviews">Review</a>
+      <a href="/reviews">レビュー</a>
     </li>
   </ul>
   <div class="side-bar__icon">
