--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,21 +2,21 @@
     <div class="footer__infos-logo">
         <div class="footer__info">
             <div>
-                <h4>회사 정보</h4>
-                <span>상호: (주)페리온</span>
-                <span>대표: 워리어</span>
-                <span>전화번호: 02-0000-0000</span>
-                <span>사업자 등록번호: 111-11111111-111</span>
-                <span>핸드폰 번호: 111-11-11111</span>
-                <span>이메일: perionwar@riors.co.kr</span>
+                <h4>会社情報</h4>
+                <span>社名: (株)PERION</span>
+                <span>取締役: Warrior</span>
+                <span>電話番号: 02-0000-0000</span>
+                <span>事業者登録番号: 111-11111111-111</span>
+                <span>携帯番号: 111-11-11111</span>
+                <span>メール: perionwar@riors.co.kr</span>
             </div>
             <div>
-                <h4>은행 정보</h4>
-                <span>00은행 (계좌번호 숫자들 - 0000)</span>
-                <span>예금주: 주먹펴고일어서서</span>
+                <h4>口座情報</h4>
+                <span>00銀行 (000 -000- 0000)</span>
+                <span>名義人: 宮本武蔵</span>
             </div>
             <div>
-                <h4>쇼핑몰</h4>
+                <h4>ショップ</h4>
                 <a href="/items/all">All</a>
                 <a href="/items/outer">Outer</a>
                 <a href="/items/inner">Inner</a>
