--- a/src/main/resources/templates/members/add-member.html
+++ b/src/main/resources/templates/members/add-member.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 회원가입</title>
+    <title>PERION - 会員登録</title>
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 가입하면 다양한 이벤트가 기다리고 있습니다.">
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="/js/kakao-address.js"></script>
@@ -13,81 +13,81 @@
 <body>
 <header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
-    <h1 class="main__title">회원 가입</h1>
+    <h1 class="main__title">会員登録</h1>
     <form id="member" class="member-add__form" action="/members/add" method="post" th:object="${memberAddDTO}">
         <label class="label" for="memberId">
-            <h5 class="label__title">아이디*</h5>
-            <input id="memberId" name ="memberId" class="input input--member input--lg" type="text" th:field="*{memberId}" placeholder="영소문자 및 숫자(5~20자)" autocomplete="off" />
+            <h5 class="label__title">会員ID*</h5>
+            <input id="memberId" name ="memberId" class="input input--member input--lg" type="text" th:field="*{memberId}" placeholder="英文小文字および数字(5~20字)" autocomplete="off" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberId}">에러 메시지를 출력합니다.</h6>
                 <h6 class="label__error" th:with="fieldName='memberId', errorMessage=${errorMessage}" th:if="${fieldName}" th:text="${errorMessage}">에러 메시지를 출력합니다.</h6>
-                <h6 id="duplicatedId" class="label__error2 hide">이미 존재하는 아이디입니다.</h6>
-                <h6 id="notDuplicatedId" class="label__error2 label__ok hide">사용 가능한 아이디입니다.</h6>
+                <h6 id="duplicatedId" class="label__error2 hide">すてに登録されているIDです。</h6>
+                <h6 id="notDuplicatedId" class="label__error2 label__ok hide">登録できるIDです。</h6>
             </div>
         </label>
         <label class="label" for="memberPw">
-            <h5 class="label__title">비밀번호*</h5>
-            <input id="memberPw" name ="memberPw" class="input input--member input--lg" type="password" placeholder="공백 이외의 모든 문자(8~20자)" />
+            <h5 class="label__title">パスワード*</h5>
+            <input id="memberPw" name ="memberPw" class="input input--member input--lg" type="password" placeholder="空白以外の全ての文字(8~20字)" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberPw}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberPw2">
-            <h5 class="label__title">비밀번호 확인*</h5>
-            <input id="memberPw2" name ="memberPw2" class="input input--member input--lg" type="password" placeholder="공백 이외의 모든 문자(8~20자)" />
+            <h5 class="label__title">パスワード確認*</h5>
+            <input id="memberPw2" name ="memberPw2" class="input input--member input--lg" type="password" placeholder="空白以外の全ての文字(8~20字)" />
             <div class="label__error-container">
-                <h6 id="memberPw2Error" class="label__error2 hide">비밀번호가 일치하지 않습니다.</h6>
+                <h6 id="memberPw2Error" class="label__error2 hide">パスワードが一致してありません。</h6>
                 <h6 class="label__error" th:errors="*{memberPw2}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberName">
-            <h5 class="label__title">성명*</h5>
-            <input id="memberName" name ="memberName" class="input input--member input--lg"  type="text" th:field="*{memberName}" placeholder="한글(2~40자)" autocomplete="off"/>
+            <h5 class="label__title">お名前*</h5>
+            <input id="memberName" name ="memberName" class="input input--member input--lg"  type="text" th:field="*{memberName}" placeholder="ハングル(2~40字)" autocomplete="off"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberName}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberHp">
-            <h5 class="label__title">휴대폰 번호*</h5>
-            <input id="memberHp" name="memberHp" class="input input--member input--lg" type="text" th:field="*{memberHp}" placeholder="-를 제외한 숫자(11자)" autocomplete="off"/>
+            <h5 class="label__title">携帯番号*</h5>
+            <input id="memberHp" name="memberHp" class="input input--member input--lg" type="text" th:field="*{memberHp}" placeholder="-を除外した数字(11字)" autocomplete="off"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberHp}">에러 메시지를 출력합니다.</h6>
-                <h6 id="duplicatedHp" class="label__error2 hide">이미 존재하는 번호입니다.</h6>
-                <h6 id="notDuplicatedHp" class="label__error2 label__ok hide">사용 가능한 번호입니다.</h6>
+                <h6 id="duplicatedHp" class="label__error2 hide">すでに登録されている番号です。</h6>
+                <h6 id="notDuplicatedHp" class="label__error2 label__ok hide">登録できる番号です。</h6>
             </div>
         </label>
         <label class="label" for="memberEmail">
-            <h5 class="label__title">이메일*</h5>
-            <input id="memberEmail" name="memberEmail" class="input input--member input--lg" type="text" th:field="*{memberEmail}" placeholder="영문 및 숫자(최대 50자)" autocomplete="off"/>
+            <h5 class="label__title">メールアドレス*</h5>
+            <input id="memberEmail" name="memberEmail" class="input input--member input--lg" type="text" th:field="*{memberEmail}" placeholder="英文および数字(最大50字)" autocomplete="off"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberEmail}">에러 메시지를 출력합니다.</h6>
-                <h6 id="duplicatedEmail" class="label__error2 hide">이미 존재하는 이메일입니다.</h6>
-                <h6 id="notDuplicatedEmail" class="label__error2 label__ok hide">사용 가능한 이메일입니다.</h6>
+                <h6 id="duplicatedEmail" class="label__error2 hide">すでに登録されているメールです。</h6>
+                <h6 id="notDuplicatedEmail" class="label__error2 label__ok hide">登録できるメールアドレスです。</h6>
             </div>
         </label>
         <label class="label" for="memberPostalCode">
-            <h5 class="label__title">우편번호*</h5>
-            <input id="memberPostalCode" name=memberPostalCode class="input input--member input--mi" type="text" th:field="*{memberPostalCode}" readonly placeholder="우편번호 찾기 버튼 클릭"/>
-            <button type="button" class="btn btn--mi btn--black btn--address" onclick="execDaumPostalcode()">우편번호 찾기</button>
+            <h5 class="label__title">郵便番号*</h5>
+            <input id="memberPostalCode" name=memberPostalCode class="input input--member input--mi" type="text" th:field="*{memberPostalCode}" readonly placeholder="検索ボタンクリック"/>
+            <button type="button" class="btn btn--mi btn--black btn--address" onclick="execDaumPostalcode()">郵便番号検索</button>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberPostalCode}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberAddressBasic">
-            <h5 class="label__title">기본 주소*</h5>
-            <input id="memberAddressBasic" name="memberAddressBasic" class="input input--member input--lg" type="text" th:field="*{memberAddressBasic}" readonly placeholder="클릭 시 자동입력" onclick="execDaumPostalcode()" />
+            <h5 class="label__title">基本住所*</h5>
+            <input id="memberAddressBasic" name="memberAddressBasic" class="input input--member input--lg" type="text" th:field="*{memberAddressBasic}" readonly placeholder="クリック時、自動入力" onclick="execDaumPostalcode()" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberAddressBasic}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberAddressDetail">
-            <h5 class="label__title">상세 주소</h5>
-            <input id="memberAddressDetail" name="memberAddressDetail" class="input input--member input--lg" placeholder="한글,영문,숫자(최대 50자)" type="text" th:field="*{memberAddressDetail}" autocomplete="off"/>
+            <h5 class="label__title">詳細住所</h5>
+            <input id="memberAddressDetail" name="memberAddressDetail" class="input input--member input--lg" placeholder="ハングル,英文,数字(最大50字)" type="text" th:field="*{memberAddressDetail}" autocomplete="off"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberAddressDetail}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
-        <button type="submit" class="btn btn--lg btn--white btn--member-add-post">회원가입 하기</button>
+        <button type="submit" class="btn btn--lg btn--white btn--member-add-post">会員登録</button>
     </form>
 </main>
 </body>
