--- a/src/main/resources/templates/orders/member-order-detail.html
+++ b/src/main/resources/templates/orders/member-order-detail.html
@@ -31,7 +31,7 @@
             <thead>
             <tr>
                 <th class="cart__checkbox">번호</th>
-                <th colspan="2" style="text-align: center">상품명</th>
+                <th colspan="2" style="text-align: center">商品名</th>
                 <th class="cart__price">상품 가격</th>
                 <th class="cart__quantity" style="text-align: center">수량</th>
                 <th class="cart__btn"></th>
@@ -71,7 +71,7 @@
             </tbody>
         </table>
         <div class="items__page notice__link">
-            <a href="#" onclick="history.back()">이전 페이지로</a>
+            <a href="#" onclick="history.back()">以前 페이지로</a>
             <a th:href="@{/members/{memberNo}/orders(memberNo=${session.loginMember.memberNo})}">주문 목록으로</a>
         </div>
     </main>
