--- a/src/main/resources/templates/orders/nonmember-order-detail-check-test.html
+++ b/src/main/resources/templates/orders/nonmember-order-detail-check-test.html
@@ -36,7 +36,7 @@
         <thead>
         <tr>
             <th class="cart__checkbox">번호</th>
-            <th colspan="2" style="text-align: center">상품명</th>
+            <th colspan="2" style="text-align: center">商品名</th>
             <th class="cart__price">상품 가격</th>
             <th class="cart__quantity" style="text-align: center">수량</th>
         </tr>
