--- a/src/main/resources/templates/reviews/enroll-success.html
+++ b/src/main/resources/templates/reviews/enroll-success.html
@@ -11,14 +11,14 @@
         }
     </script>
 
-    <title>등록 성공</title>
+    <title>登録成功</title>
 </head>
 <body>
 
 
 <div>
-    <h1>등록 완료</h1>
-    <button class="btn--black btn--mi" onclick="closePopup();">닫기</button>
+    <h1>登録完了</h1>
+    <button class="btn--black btn--mi" onclick="closePopup();">閉める</button>
 </div>
 
 </body>
