--- a/src/main/resources/templates/admins/notice/admin-notice-search.html
+++ b/src/main/resources/templates/admins/notice/admin-notice-search.html
@@ -51,7 +51,7 @@
                 <td>
                     <form name="deleteNotice" th:action="@{|/notice/admin/${noticeSearchDTO.noticeNo}/delete|}"
                           method="post">
-                        <button class="btn btn--index btn--black btn--xs">삭제</button>
+                        <button class="btn btn--index btn--black btn--xs"></button>
                     </form>
                 </td>
             </tr>
@@ -63,9 +63,9 @@
             </div>
         </form>
         <div class="admin_notice_page">
-            <span th:if="${pageSettings.page &lt;= 1}">이전</span>
+            <span th:if="${pageSettings.page &lt;= 1}">以前</span>
             <span th:unless="${pageSettings.page &lt;= 1}">
-                    <a th:href="@{/notice/admin/search(page=${pageSettings.page - 1}, category=${noticeSearchForm.category}, keyword=${noticeSearchForm.keyword})}">이전</a>
+                    <a th:href="@{/notice/admin/search(page=${pageSettings.page - 1}, category=${noticeSearchForm.category}, keyword=${noticeSearchForm.keyword})}">以前</a>
                   </span>
 
             <span th:each="i : ${#numbers.sequence(pageSettings.startPage, pageSettings.endPage)}">
@@ -75,10 +75,10 @@
                        th:text="${i}"></a>
                   </span>
 
-            <span th:if="${pageSettings.page >= pageSettings.totalPage}">다음</span>
+            <span th:if="${pageSettings.page >= pageSettings.totalPage}">次に</span>
             <a th:unless="${pageSettings.page >= pageSettings.totalPage}"
                th:href="@{/notice/admin/search(page=${pageSettings.page + 1}, category=${noticeSearchForm.category}, keyword=${noticeSearchForm.keyword})}"
-            >다음</a
+            >次に</a
             >
         </div>
     </div><!--main div-->
