--- a/src/main/resources/templates/admins/notice/admin-notice.html
+++ b/src/main/resources/templates/admins/notice/admin-notice.html
@@ -52,7 +52,7 @@
                 <td>
                     <form name="deleteNotice" th:action="@{|/notice/admin/${noticeSearchDTO.noticeNo}/delete|}"
                           method="post">
-                        <button th:if="${session.loginAdmin} != null" class="btn btn--index btn--black btn--xs">삭제</button>
+                        <button th:if="${session.loginAdmin} != null" class="btn btn--index btn--black btn--xs"></button>
                     </form>
                 </td>
             </tr>
@@ -65,9 +65,9 @@
             </div>
         </form>
         <div class="admin_notice_page" th:if="${noticeListByPaging.size()} > 0">
-            <span th:if="${pageSettings.page &lt;= 1}">이전</span>
+            <span th:if="${pageSettings.page &lt;= 1}">以前</span>
             <span th:unless="${pageSettings.page &lt;= 1}">
-                    <a th:href="@{/notice/admin(page=${pageSettings.page - 1})}">이전</a>
+                    <a th:href="@{/notice/admin(page=${pageSettings.page - 1})}">以前</a>
                   </span>
 
             <span th:each="i : ${#numbers.sequence(pageSettings.startPage, pageSettings.endPage)}">
@@ -77,10 +77,10 @@
                        th:text="${i}"></a>
                   </span>
 
-            <span th:if="${pageSettings.page >= pageSettings.totalPage}">다음</span>
+            <span th:if="${pageSettings.page >= pageSettings.totalPage}">次に</span>
             <a th:unless="${pageSettings.page >= pageSettings.totalPage}"
                th:href="@{/notice/admin(page=${pageSettings.page + 1})}"
-            >다음</a
+            >次に</a
             >
         </div>
     </div>
