--- a/src/main/resources/templates/admins/qna/admin-qna.html
+++ b/src/main/resources/templates/admins/qna/admin-qna.html
@@ -25,10 +25,10 @@
               <th>번호</th>
               <th>회원 아이디</th>
               <th>상품 번호</th>
-              <th>구분</th>
+              <th>種類</th>
               <th>제목</th>
-              <th>등록일자</th>
-              <th>답변여부</th>
+              <th>登録時間</th>
+              <th>回答状況</th>
             </tr>
           </thead>
           <tbody th:each="QnaDTO : ${qnaListByPaging}">
@@ -48,9 +48,9 @@
         <div th:if="${qnaListByPaging.size()} == 0" class="no-dto-comment">Q&A 내역이 없습니다.</div>
 
         <div class="admin_member_page" th:if="${qnaListByPaging.size()} > 0">
-          <span th:if="${pageSettings.page &lt;= 1}">이전</span>
+          <span th:if="${pageSettings.page &lt;= 1}">以前</span>
           <span th:unless="${pageSettings.page &lt;= 1}">
-            <a th:href="@{/qna(page=${pageSettings.page - 1})}">이전</a>
+            <a th:href="@{/qna(page=${pageSettings.page - 1})}">以前</a>
           </span>
 
           <span th:each="i : ${#numbers.sequence(pageSettings.startPage, pageSettings.endPage)}">
@@ -60,10 +60,10 @@
                th:text="${i}"></a>
           </span>
 
-          <span th:if="${pageSettings.page >= pageSettings.totalPage}">다음</span>
+          <span th:if="${pageSettings.page >= pageSettings.totalPage}">次に</span>
           <a th:unless="${pageSettings.page >= pageSettings.totalPage}"
              th:href="@{/qna(page=${pageSettings.page + 1})}"
-          >다음</a
+          >次に</a
           >
         </div>
       </div>
