--- a/src/main/resources/templates/error/5xx.html
+++ b/src/main/resources/templates/error/5xx.html
@@ -13,9 +13,9 @@
 </header>
 <main class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
-    <h1>잠시 후 다시 시도해주세요</h1>
-    <h3>서버로부터 리소스를 찾는데 문제가 발생했습니다.</h3>
-    <button type="button" class="btn btn--black btn--home btn--error">홈으로 돌아가기</button>
+    <h1>しばらくしてからもう一度お試しください!</h1>
+    <h3>サーバーから問題が生じました。大変申し訳ございません。</h3>
+    <button type="button" class="btn btn--black btn--home btn--error">ホームへ</button>
 </main>
 </body>
 </html>
