--- a/src/main/resources/templates/fragments/admin-login-header.html
+++ b/src/main/resources/templates/fragments/admin-login-header.html
@@ -2,8 +2,7 @@
     <a href="#" class="header__logo">PERION</a>
     <nav class="header__nav">
         <ul>
-            <li><a href="/">페리온</a></li>
-            <li><a href="javascript:void(0)" class="admin__logout">로그아웃</a></li>
+            <li><a href="javascript:void(0)" class="admin__logout">ログアウト</a></li>
         </ul>
     </nav>
 </header>
