--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
             <nav class="header__nav">
                 <ul class="header__lists">
                     <li class="header__list header__nav-shop">
-                        <a  id=nav-shop__link href="/items/all">쇼핑몰</a>
+                        <a  id=nav-shop__link href="/items/all">ショップ</a>
                         <ul class="nav-shop__menus">
                             <li class="nav-shop__menu"><a class="nav-shop__menu--title" href="/items/all">All</a></li>
                             <li class="nav-shop__menu"><a class="nav-shop__menu--title" href="/items/outer">Outer</a></li>
@@ -13,21 +13,21 @@
                         </ul>
                     </li>
                     <li class="header__list">
-                        <a class="header__nav-search"  href='javascript:void(0)'>상품검색</a>
+                        <a class="header__nav-search"  href='javascript:void(0)'>商品検索</a>
                         <ul class="nav-search__menus">
                             <li class="nav-search__menu">
                                 <form class="header__search-form" action="/items/search" method="get">
                                     <label for="header__search">
-                                        <input id="header__search" name="searchKeyword" class="header__search" type="text" placeholder="상품명을 입력해주세요">
-                                        <button class="btn btn--xs btn--white">검색</button>
+                                        <input id="header__search" name="searchKeyword" class="header__search" type="text" placeholder="商品名を入力">
+                                        <button class="btn btn--xs btn--white">検索</button>
                                     </label>
                                 </form>
                             </li>
                         </ul>
                     </li>
-                    <li class="header__list"><a href="/notice">공지사항</a></li>
-                    <li class="header__list"><a href="/members/login">로그인</a></li>
-                    <li class="header__list"><a href="/carts">장바구니</a></li>
+                    <li class="header__list"><a href="/notice">お知らせ</a></li>
+                    <li class="header__list"><a href="/members/login">ログイン</a></li>
+                    <li class="header__list"><a href="/carts">カート</a></li>
                 </ul>
             </nav>
     </div>
