--- a/src/main/resources/templates/info/find-id-pw.html
+++ b/src/main/resources/templates/info/find-id-pw.html
@@ -2,58 +2,57 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - ID/PW 찾기 페이지</title>
-    <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 로그인하면 다양한 이벤트 정보를 확인할 수 있습니다.">
+    <title>PERION - ID/PW 照会ページ</title>
     <script src="/js/radio-display.js"></script>
 </head>
 <body>
 <header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
-    <h1 class="main__title">아이디/비밀번호 찾기</h1>
+    <h1 class="main__title">ID/パスワード照会</h1>
         <form class="radio__container2">
             <label>
-                <input type="radio" class="radio" name="option" id="findIdRadio" onclick="change_form('findIdRadio')" checked>아이디 찾기
+                <input type="radio" class="radio" name="option" id="findIdRadio" onclick="change_form('findIdRadio')" checked>ID照会
             </label>
             <label>
-                <input type="radio" class="radio" name="option" id="findPwRadio" onclick="change_form('findPwRadio')">비밀번호 찾기
+                <input type="radio" class="radio" name="option" id="findPwRadio" onclick="change_form('findPwRadio')">パスワード照会
             </label>
         </form>
     <!--아이디 찾기-->
     <form action="/members/info/id/find-success" name="memberEmail" method="post" id="display1" th:object="${memberIdDTO}"><!--th:object="${memberIdDTO}"-->
         <label class="label" for="memberEmail">
-            <h5 class="label__title">이메일*</h5>
+            <h5 class="label__title">メールアドレス*</h5>
             <input id="memberEmail" name="memberEmail" class="input input--member" type="text" th:field="*{memberEmail}"/><!--th:field="*{memberEmail}"추가 예정"-->
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberEmail}">에러 메시지를 출력합니다.</h6> <!--th:errors="*{memberEmail}"-->
             </div>
         </label>
-        <button type="submit" class="btn btn--black">아이디 조회</button>
+        <button type="submit" class="btn btn--black">ID照会</button>
     </form>
 
     <!--비밀번호 찾기-->
     <form action="/members/info/pw" method="post" id="display2" th:object="${memberPwDTO}"><!--th:object="${memberPwDTO}"-->
         <label class="label" for="memberId">
-            <h5 class="label__title">아이디*</h5>
+            <h5 class="label__title">会員ID*</h5>
             <input id="memberId" name="memberId" class="input input--member" type="text"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberId}">에러 메시지를 출력합니다.</h6><!--th:errors="*{memberId}-->
             </div>
         </label>
         <label class="label" for="Email">
-            <h5 class="label__title">이메일*</h5>
+            <h5 class="label__title">メールアドレス*</h5>
             <input id="Email" name="memberEmail" class="input input--member" type="text"/>
             <div class="label__error-container">
                 <h6 class="label__error"th:errors="*{memberEmail}">에러 메시지를 출력합니다.</h6><!--th:errors="*{memberEmail}"-->
             </div>
         </label>
         <label class="label" for="Email">
-            <h5 class="label__title">핸드폰번호*</h5>
+            <h5 class="label__title">携帯番号*</h5>
             <input id="verification code" name="memberHp" class="input input--member" type="text"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberHp}">에러 메시지를 출력합니다.</h6><!--th:errors="*{memberHp}"-->
             </div>
         </label>
-        <button type="submit" class="btn btn--black">비밀번호 찾기</button>
+        <button type="submit" class="btn btn--black">パスワード照会</button>
     </form>
 </main>
 </body>
