--- a/src/main/resources/templates/items/item-detail.html
+++ b/src/main/resources/templates/items/item-detail.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 상품 상세</title>
+    <title>PERION - 商品詳細</title>
     <meta name="description" content="상품 정보, Q&A, 가격 등 다양한 상품의 정보를 확인하세요.">
     <link rel="stylesheet" href="/css/pages/user/items.css">
     <link rel="stylesheet" href="/css/components/star.css">
@@ -37,9 +37,9 @@
                     </div>
                 </div>
             </div>
-            <h2 class="item__card-price item__price" th:text="${itemDTO.itemPrice} + '원'"></h2>
+            <h2 class="item__card-price item__price" th:text="${itemDTO.itemPrice} + 'ウォン'"></h2>
 
-            <h5 class="label__title item__info-title">사이즈</h5>
+            <h5 class="label__title item__info-title">サイズ</h5>
             <div>
             <form th:action="@{${session.loginMember} != null? '/carts/' + ${session.loginMember.memberNo}: '/carts'}" method = "post" class="item__sizebtns select" style = "display: inline">
                 <input type="radio" id="s" name="itemSize" value="S"><label for="s">S</label>
@@ -53,7 +53,7 @@
 
             <div class="item__info-title">
                 <label class="label" for="item__count">
-                    <h5 class="label__title">상품 수량</h5>
+                    <h5 class="label__title">商品数量</h5>
                     <div class="item__countbtns">
                         <button onclick = "changeCartAddQuantity(-1, 'item__count')" type = "button" class="btn btn--xs btn--white btn--item">-</button>
                         <input style = "text-align:center;" value="1" id="item__count" class="input input--item" name = "itemQuantity">
@@ -61,10 +61,10 @@
                     </div>
                 </label>
             </div>
-            <h5 class="label__title item__info-title">배송비</h5>
-            <span class="item__delivery--price">3000원(10만원 구매 이상 시 무료)</span>
+            <h5 class="label__title item__info-title">送料</h5>
+            <span class="item__delivery--price">3000ウォン(10万ウォン以上は無料)</span>
                 <div class="slide__btns item__btns"></div> <br>
-                <button class="btn btn--index btn--white btn--item-detail">장바구니 추가</button>
+                <button class="btn btn--index btn--white btn--item-detail">カートに追加</button>
             </form>
                 <button th:if="${session.loginMember} != null"
                         th:memberNo="${session.loginMember.memberNo}"
@@ -73,25 +73,25 @@
                         th:itemPrice="${itemDTO.itemPrice}"
                         th:onclick="checkItemStockPurchase(this.getAttribute('memberNo'), this.getAttribute('itemNo'), this.getAttribute('itemName'), this.getAttribute('itemPrice'))"
                         class="btn btn--index btn--black btn--purchase btn--item-detail"
-                        th:text="구매하기"></button>
+                        th:text="商品購買"></button>
                 <button th:unless="${session.loginMember} != null"
                         th:itemNo="${itemDTO.itemNo}"
                         th:itemName="${itemDTO.itemName}"
                         th:itemPrice="${itemDTO.itemPrice}"
                         th:onclick="checkNonMemberItemStockPurchase(this.getAttribute('itemNo'), this.getAttribute('itemName'), this.getAttribute('itemPrice'))"
                         class="btn btn--index btn--black btn--purchase btn--item-detail"
-                        th:text="구매하기"></button>
+                        th:text="商品購買"></button>
             </div>
             <div th:if="${ifAdded} != null">
-                <a th:if="${ifAdded} == false" th:text="'이미 장바구니에 담긴 상품입니다.'"></a>
+                <a th:if="${ifAdded} == false" th:text="'すでにカートに追加されている商品です。'"></a>
             </div>
         </div>
     </section>
     <nav class ="item__nav-container">
         <ul class="item__navs">
-            <li class="item__detail-link">상품 정보</li>
+            <li class="item__detail-link">商品情報</li>
             <li class="item__qna-link">Q&A</li>
-            <li class="item__review-link">리뷰</li>
+            <li class="item__review-link">レビュー</li>
         </ul>
     </nav>
     <section class="item-detail__container" id="item__detail">
@@ -137,17 +137,17 @@
     <section class="item-detail__container" id="item__qna">
         <div class="qna__more">
             <h1 class="section__title">Q & A</h1>
-            <a th:href="@{|/items/${itemNo}/qna|}">더보기</a>
+            <a th:href="@{|/items/${itemNo}/qna|}">もっと見る</a>
         </div>
         <table class="table__client">
             <thead>
             <tr>
-                <th class="table__no">번호</th>
-                <th class="table__category">구분</th>
-                <th>내용</th>
-                <th class="table__user">작성자</th>
-                <th class="table__regtime">등록일자</th>
-                <th class="table__answer">답변 여부</th>
+                <th class="table__no">番号</th>
+                <th class="table__category">種類</th>
+                <th>内容</th>
+                <th class="table__user">作成者</th>
+                <th class="table__regtime">登録時間</th>
+                <th class="table__answer">回答状況</th>
             </tr>
             </thead>
             <tbody th:each="QnaDTO,itemQnaNo : ${qnaByItemNo}" th:if="${itemQnaNo.index < 10}">
@@ -159,96 +159,15 @@
                 <td class="table__regtime" th:text="${#dates.format(QnaDTO.qnaQuestionCreatedTime, 'yyyy-MM-dd')}"></td>
                 <!-- 답변완료(td:if로 걸고 안되면 기존의 span으로!) -->
                 <td class="table__answer">
-                    <span th:if="${QnaDTO.qnaAnswer != null}" >답변완료</span>
-                    <span th:unless="${QnaDTO.qnaAnswer != null}">답변대기</span>
+                    <span th:if="${QnaDTO.qnaAnswer != null}" >回答済み</span>
+                    <span th:unless="${QnaDTO.qnaAnswer != null}">回答待機</span>
                 </td>
             </tr>
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">2</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">3</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">4</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">5</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">6</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">7</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">8</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">9</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
-<!--            <tr class="table__row">-->
-<!--                <td class="table__no">10</td>-->
-<!--                &lt;!&ndash; 답변완료(td:if로 걸고 안되면 기존의 span으로!) &ndash;&gt;-->
-<!--                <td class="table__category">상품 상세문의</td>-->
-<!--                <td>옷의 재질은 뭐인가요?</td>-->
-<!--                <td class="table__user">user****</td>-->
-<!--                <td class="table__regtime">2023-05-12</td>-->
-<!--                <td class="table__answer">답변 대기</td>-->
-<!--            </tr>-->
         </table>
         <div class="qna__form">
             <button class="btn btn--mi btn--white btn--qna" th:if="${session.loginMember != null}" th:onclick="|window.open('/qna/${session.loginMember.getMemberNo()}/${itemNo}', 'name', 'resizable=no,width=380,height=600'); return false;|">질문 등록</button>
             <button class="btn btn--mi btn--white btn--qna" th:unless="${session.loginMember != null}" th:onclick="|window.location.href='/members/login'|">
-                질문 등록
+                質問登録
             </button>
         </div>
     </section>
@@ -257,15 +176,15 @@
     ★<span th:if="${itemDTO.itemGrade != null}" th:text="${itemDTO.itemGrade}"></span>
 -->
         <div class="qna__more">
-            <h1 class="section__title">리뷰 </h1>
-            <a th:href="@{|/items/${itemNo}/reviews|}">더보기</a>
+            <h1 class="section__title">レビュー </h1>
+            <a th:href="@{|/items/${itemNo}/reviews|}">もっと見る</a>
         </div>
         <div class="reviews__container" th:each="ReviewDTO,reviewNo : ${reviewByItemNo}" th:if="${reviewNo.index < 10}">
             <div class="review">
                 <div class="review__flex">
                     <div>
                     <span class="review__header" th:text="${#strings.substring(ReviewDTO.memberId, 0, #strings.length(ReviewDTO.memberId) - 2)} + '***'"></span> <!--th:text 멤버 아이디-->
-                    <span class="review__header" th:text="'사이즈:'+${ReviewDTO.itemSize}"></span> <!--th:text 구입 상품 사이즈-->
+                    <span class="review__header" th:text="'サイズ:'+${ReviewDTO.itemSize}"></span> <!--th:text 구입 상품 사이즈-->
                     <span class="review__header" th:text="'★'+${ReviewDTO.reviewScore}"></span> <!--th:text 구입 상품 별점-->
                     </div>
 
@@ -274,95 +193,14 @@
                 <p th:text="${ReviewDTO.reviewContext}"></p>
             </div>
         </div>
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="reviews__container">-->
-<!--            <div class="review">-->
-<!--                <span class="review__header">회원 아이디</span> &lt;!&ndash;th:text 멤버 아이디&ndash;&gt;-->
-<!--                <span class="review__header">사이즈:M</span> &lt;!&ndash;th:text 구입 상품 사이즈&ndash;&gt;-->
-<!--                <span class="review__header">★4</span> &lt;!&ndash;th:text 구입 상품 별점&ndash;&gt;-->
-<!--                &lt;!&ndash;th:text 리뷰 내용 &ndash;&gt;-->
-<!--                <p>너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호너무 좋아요 호호호</p>-->
-<!--            </div>-->
-<!--        </div>-->
         <div class="items__page review__page">
         </div>
     </section>
     <aside class="item__aside">
-        <button class="aside__info btn btn--mi btn--white btn--aside btn--no-border-bottom">상품 정보</button>
-        <button class="aside__detail btn btn--mi btn--white btn--aside btn--no-border-bottom">상품 상세</button>
+        <button class="aside__info btn btn--mi btn--white btn--aside btn--no-border-bottom">商品情報</button>
+        <button class="aside__detail btn btn--mi btn--white btn--aside btn--no-border-bottom">商品詳細</button>
         <button class="aside__qna btn btn--mi btn--white btn--aside btn--no-border-bottom">Q & A</button>
-        <button class="aside__review btn btn--mi btn--white btn--aside">리뷰</button>
+        <button class="aside__review btn btn--mi btn--white btn--aside">レビュー</button>
     </aside>
 </main>
 </body>
