--- a/src/main/resources/templates/members/add-member-success.html
+++ b/src/main/resources/templates/members/add-member-success.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 회원가입을 축하합니다.</title>
+    <title>PERION - 会員登録完了</title>
     <script type="module" src="/js/redirect-alert.js" defer></script>
     <script type="text/javascript" src="/js/pages/member-add-success.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10" defer></script>
@@ -12,9 +12,9 @@
 <header th:replace="~{fragments/header :: header}"></header>
 <main class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
-    <h1>페리온의 멤버가 되신 것을 환영합니다!</h1>
-    <button type="button" class="btn btn--white btn--home btn--home-member-add-success">홈으로</button>
-    <button type="button" class="btn btn--black btn--login">로그인 하기</button>
+    <h1>ぺリオンのメンバーになって頂き、ありがとうございます。</h1>
+    <button type="button" class="btn btn--white btn--home btn--home-member-add-success">ホーム</button>
+    <button type="button" class="btn btn--black btn--login">ログイン</button>
 </main>
 </body>
 </html>
