--- a/src/main/resources/templates/members/delete-member.html
+++ b/src/main/resources/templates/members/delete-member.html
@@ -2,29 +2,29 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 회원 탈퇴 페이지</title>
+    <title>PERION - 会員退会</title>
 </head>
 <body>
 <header th:replace="~{fragments/login-header :: header}">
 </header>
 <main class="main__container">
-    <h1 class="main__title">회원 탈퇴</h1>
+    <h1 class="main__title">会員退会</h1>
     <form th:action method="post" th:object="${memberDeleteDTO}" >
         <label class="label" for="memberPw">
-            <h5 class="label__title">비밀번호</h5>
+            <h5 class="label__title">パスワード*</h5>
             <input id="memberPw" name="memberPw" class="input" type="password" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberPw}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberPw2">
-            <h5 class="label__title">비밀번호 확인</h5>
+            <h5 class="label__title">パスワード確認*</h5>
             <input id="memberPw2" name ="memberPw2" class="input" type="password" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberPw2}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
-        <button type="submit" class="btn btn--black ">회원탈퇴</button>
+        <button type="submit" class="btn btn--black ">会員退会</button>
     </form>
 </main>
 </body>
