--- a/src/main/resources/templates/members/member-info.html
+++ b/src/main/resources/templates/members/member-info.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 마이 페이지</title>
+    <title>PERION - 会員情報</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
@@ -10,15 +10,15 @@
 </header>
 <section class="main__container">
     <img class="main__logo" src="/images/spartan-helmet.svg">
-    <h2 th:text="|${session.loginMember.getMemberId()}님|">회원 ID님</h2>
-    <h4>어떤 도움이 필요하신가요? :)</h4>
+    <h2 th:text="|${session.loginMember.getMemberId()}様|">회원 ID님</h2>
+    <h4>どの情報をお探しでしょうか？ :)</h4>
 </section>
 <section id="my-info">
   <ul class="myinfo__container">
-        <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/update|}"><img class="myinfo__icons" src="/images/icons/user.svg"><h4 class="myinfo__text">회원정보 수정</h4></a></li>
-        <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/orders|}"><img class="myinfo__icons" src="/images/icons/order.svg"> <h4 class="myinfo__text">주문목록 조회</h4></a></li>
-        <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/reviews|}"><img class="myinfo__icons" src="/images/icons/review.svg"> <h4 class="myinfo__text">리뷰목록 조회</h4></a></li>
-        <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/qna|}"><img class="myinfo__icons" src="/images/icons/qna.svg"> <h4 class="myinfo__text">나의 질문 조회</h4></a></li>
+        <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/update|}"><img class="myinfo__icons" src="/images/icons/user.svg"><h4 class="myinfo__text">会員情報更新</h4></a></li>
+        <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/orders|}"><img class="myinfo__icons" src="/images/icons/order.svg"> <h4 class="myinfo__text">注文一覧確認</h4></a></li>
+        <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/reviews|}"><img class="myinfo__icons" src="/images/icons/review.svg"> <h4 class="myinfo__text">レビュー一覧確認</h4></a></li>
+        <li class="myinfo__list"><a th:href="@{|/members/${session.loginMember.getMemberNo()}/qna|}"><img class="myinfo__icons" src="/images/icons/qna.svg"> <h4 class="myinfo__text">質問一覧確認</h4></a></li>
   </ul>
 </section>
 </body>
