--- a/src/main/resources/templates/members/member-login.html
+++ b/src/main/resources/templates/members/member-login.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 로그인 페이지</title>
+    <title>PERION - ログインページ</title>
     <meta name="description" content="20대 선호도 1위 쇼핑몰! 지금 로그인하면 다양한 이벤트 정보를 확인할 수 있습니다.">
     <script type="module" src="/js/pages/member-login.js" defer></script>
     <script src="/js/validation.js" defer></script>
@@ -16,27 +16,27 @@
     </div>
     <form id="member" class="login__form" th:action method="post" th:object="${memberLoginDTO}">
         <label class="label" for="memberId">
-            <h5 class="label__title">아이디</h5>
+            <h5 class="label__title">会員ID</h5>
             <input id="memberId" name="memberId" class="input input--member login__id" type="text" th:field="*{memberId}" autocomplete="off"/>
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberId}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
         <label class="label" for="memberPw">
-            <h5 class="label__title">비밀번호</h5>
+            <h5 class="label__title">パスワード</h5>
             <input id="memberPw" name="memberPw" class="input input--member login__pw" type="password" />
             <div class="label__error-container">
                 <h6 class="label__error" th:errors="*{memberPw}">에러 메시지를 출력합니다.</h6>
             </div>
         </label>
-        <button type="submit" class="btn btn--black btn--member-login">로그인</button>
-        <button type="button" class="btn btn--white btn--member-add">회원가입</button>
+        <button type="submit" class="btn btn--black btn--member-login">ログイン</button>
+        <button type="button" class="btn btn--white btn--member-add">会員登録</button>
     </form>
 
     <nav class="info__nav">
         <ul class="info__links">
-            <a href="/members/info">아이디/비밀번호 찾기</a>
-            <a href="/orders/non-members">비회원 주문 조회하기</a>
+            <a href="/members/info">ID/パスワード 照会</a>
+            <a href="/orders/non-members">非会員の注文照会</a>
         </ul>
     </nav>
 </main>
