--- a/src/main/resources/templates/qna/item-qna-all.html
+++ b/src/main/resources/templates/qna/item-qna-all.html
@@ -32,11 +32,11 @@
         <table class="table__client" th:if="${qnaListByPaging.size()} > 0">
             <thead>
             <tr>
-                <th class="table__no">질문번호</th>
-                <th class="table__category">구분</th>
-                <th>내용</th>
-                <th class="table__regtime">등록일자</th>
-                <th class="table__answer">답변 여부</th>
+                <th class="table__no">質問番号</th>
+                <th class="table__category">種類</th>
+                <th>内容</th>
+                <th class="table__regtime">登録時間</th>
+                <th class="table__answer">回答状況</th>
             </tr>
             </thead>
             <tbody>
@@ -47,18 +47,18 @@
                 <td th:text="${#dates.format(QnaDTO.qnaQuestionCreatedTime, 'yyyy-MM-dd')}"
                     th:onclick="|return openQnaWindow('${QnaDTO.itemNo}', '${QnaDTO.qnaNo}');|"></td>
                 <td>
-                    <span th:if="${QnaDTO.qnaAnswer != null}" >답변완료</span>
-                    <span th:unless="${QnaDTO.qnaAnswer != null}">답변대기</span>
+                    <span th:if="${QnaDTO.qnaAnswer != null}" >回答済み</span>
+                    <span th:unless="${QnaDTO.qnaAnswer != null}">回答待機</span>
                 </td>
             </tr>
             </tbody>
         </table>
-        <div th:if="${qnaListByPaging.size()} == 0" class="no-dto-comment">Q&A 내역이 없습니다.</div>
+        <div th:if="${qnaListByPaging.size()} == 0" class="no-dto-comment">Q&A履歴がありません。</div>
     </div>
     <div class="qna__page" th:if="${qnaListByPaging} > 0">
-        <span th:if="${pageSettings.page &lt;= 1}">이전</span>
+        <span th:if="${pageSettings.page &lt;= 1}">以前</span>
         <span th:unless="${pageSettings.page &lt;= 1}">
-            <a th:href="@{/items/{itemNo}/qna(itemNo=${itemNo},page=${pageSettings.page - 1})}">이전</a>
+            <a th:href="@{/items/{itemNo}/qna(itemNo=${itemNo},page=${pageSettings.page - 1})}">以前</a>
           </span>
 
         <span th:each="i : ${#numbers.sequence(pageSettings.startPage, pageSettings.endPage)}">
@@ -68,10 +68,10 @@
                th:text="${i}"></a>
           </span>
 
-        <span th:if="${pageSettings.page >= pageSettings.totalPage}">다음</span>
+        <span th:if="${pageSettings.page >= pageSettings.totalPage}">次に</span>
         <a th:unless="${pageSettings.page >= pageSettings.totalPage}"
            th:href="@{/items/{itemNo}/qna(itemNo=${itemNo},page=${pageSettings.page + 1})}"
-        >다음</a
+        >次に</a
         >
     </div><!--main div-->
 </main>
