--- a/src/main/resources/templates/qna/member-qna-update.html
+++ b/src/main/resources/templates/qna/member-qna-update.html
@@ -6,21 +6,21 @@
 </head>
 <body>
     <form  th:action="@{'/members/' + ${session.loginMember.getMemberNo()} + '/qna/' + ${qnaDetail.qnaNo} + '/update'}" method="post" >
-    번호 <span th:text="${qnaDetail.qnaNo}"></span> <p>
-        제목 <input type="text" name="qnaTitle" th:value="${qnaDetail.qnaTitle}" /> <p>
-        작성시간 <span th:text="${qnaDetail.qnaQuestionCreatedTime}"></span><p>
+    番号 <span th:text="${qnaDetail.qnaNo}"></span> <p>
+        題名<input type="text" name="qnaTitle" th:value="${qnaDetail.qnaTitle}" /> <p>
+        作成時間 <span th:text="${qnaDetail.qnaQuestionCreatedTime}"></span><p>
     <p></p>
-    상품 번호 <span th:text="${qnaDetail.ItemNo}"></span><p>
-        구분 <select name="qnaClassification">
-        <option value="사이즈" th:selected="${qnaDetail.qnaClassification == '사이즈'}">사이즈</option>
-        <option value="배송" th:selected="${qnaDetail.qnaClassification == '배송'}">배송</option>
-        <option value="재입고" th:selected="${qnaDetail.qnaClassification == '재입고'}">재입고</option>
-        <option value="상품상세문의" th:selected="${qnaDetail.qnaClassification == '상품상세문의'}">상품상세문의</option>
+    商品番号 <span th:text="${qnaDetail.ItemNo}"></span><p>
+        種類 <select name="qnaClassification">
+        <option value="사이즈" th:selected="${qnaDetail.qnaClassification == '사이즈'}">サイズ</option>
+        <option value="배송" th:selected="${qnaDetail.qnaClassification == '배송'}">配送</option>
+        <option value="재입고" th:selected="${qnaDetail.qnaClassification == '재입고'}">再入庫</option>
+        <option value="상품상세문의" th:selected="${qnaDetail.qnaClassification == '상품상세문의'}">商品詳細</option>
     </select>
     <p></p>
-    내용 <textarea name="qnaQuestion" th:text="${qnaDetail.qnaQuestion}"></textarea>
+    内容 <textarea name="qnaQuestion" th:text="${qnaDetail.qnaQuestion}"></textarea>
 
-        <button>수정</button>
+        <button>修正</button>
     </form>
 
     </div>
