--- a/src/main/resources/templates/qna/qna-add.html
+++ b/src/main/resources/templates/qna/qna-add.html
@@ -2,27 +2,27 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:remove="tag" th:replace="~{fragments/head :: head} "></div>
-    <title>PERION - 질문 등록</title>
+    <title>PERION - 質問登録</title>
     <link rel="stylesheet" href="/css/pages/user/qna-add.css">
 </head>
 <body class="main__container">
-    <h2 class="main__title qna-add__title">질문 등록</h2>
+    <h2 class="main__title qna-add__title">質問登録</h2>
     <div class="qna-add__container">
         <form id="addQna" th:action="@{'/qna/' + ${session.loginMember.getMemberNo()} + '/' + ${itemNo}}" method="post" >
             <div class="qna-add__header">
-            <input type="text" name="qnaTitle" placeholder="제목">
+            <input type="text" name="qnaTitle" placeholder="題名">
             <select name="qnaClassification">
-                <option value="사이즈">사이즈</option>
-                <option value="배송">배송</option>
-                <option value="재입고">재입고</option>
-                <option value="상품상세문의">상품상세문의</option>
+                <option value="사이즈">サイズ</option>
+                <option value="배송">配送</option>
+                <option value="재입고">再入庫</option>
+                <option value="상품상세문의">商品詳細</option>
             </select>
             </div>
              <textarea
                      name="qnaQuestion"
                      maxlength="400"
              ></textarea>
-            <button class="btn btn--black btn--mi" >등록</button>
+            <button class="btn btn--black btn--mi" >登録</button>
         </form>
     </div>
 </body>
