--- a/src/main/resources/templates/reviews/item-review.html
+++ b/src/main/resources/templates/reviews/item-review.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-  리뷰 목록 가져오는 리스트입니당~
     <div th:each="ReviewDTO,itemReviewNo : ${itemReviewList}">
         <span th:text="${itemReviewNo.count}"></span>
         <span th:text="${ReviewDTO.memberId}"></span>
@@ -17,7 +16,7 @@
 
         <form th:action="'/members/'+${ReviewDTO.memberNo}+'/reviews/'+${ReviewDTO.reviewNo}" method="post">
             <input type="hidden" name="reviewNo" th:value="${ReviewDTO.reviewNo}" />
-            <button th:if="${session.loginMember != null}">삭제</button>
+            <button th:if="${session.loginMember != null}">削除</button>
         </form>
 
         <hr>
